...
            AuthMethodDivider()
            Spacer(modifier = Modifier.height(LeoDimens.SpaceMd))

            LeoTextField(
                value = uiState.email,
                onValueChange = viewModel::onEmailChange,
                label = "Correo o usuario",
                modifier = Modifier
                    .fillMaxWidth()
                    .v2KeepVisibleOnFocus(),
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Ascii,
                    imeAction = ImeAction.Next
...
